--- a/src/Component/TopBar.css
+++ b/src/Component/TopBar.css
@@ -2,6 +2,14 @@
     overflow: hidden;
     background-color: #333;
   }
+
+  .topnav img {
+    float: left;
+    width: 50px;
+    height: 50px;
+    padding: 7px 7px;
+    margin-left: 10px;
+  }
   
   .topnav button {
     float: left;
@@ -45,6 +53,6 @@
     letter-spacing: 3px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-right: 100px;
-    margin-left: 50px;
+    margin-left: 5px;
     
   }
